--- a/package.json
+++ b/package.json
@@ -2,11 +2,16 @@
   "name": "hotel-management",
   "version": "0.1.0",
   "private": true,
+  "prettier": {
+    "semi": false,
+    "singleQuote": true
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "format": "prettier --write ."
   },
   "dependencies": {
     "@sanity/vision": "^3.24.1",
@@ -28,6 +33,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.0.4",
     "postcss": "^8",
+    "prettier": "^3.2.2",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
   }
