--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.12.0",
-    "sanity": "^3.24.1"
+    "sanity": "^3.24.1",
+    "swr": "^2.2.4"
   },
   "devDependencies": {
     "@types/node": "^20",
