--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
   },
   "dependencies": {
     "@sanity/vision": "^3.24.1",
+    "axios": "^1.6.5",
     "next": "14.0.4",
     "next-auth": "^4.24.5",
     "next-auth-sanity": "^1.5.3",
     "next-sanity": "^7.0.10",
     "react": "^18",
+    "react-datepicker": "^4.25.0",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.12.0",
@@ -29,6 +31,7 @@
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
+    "@types/react-datepicker": "^4.19.5",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
