--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@sanity/vision": "^3.24.1",
+    "@stripe/stripe-js": "^2.3.0",
     "axios": "^1.6.5",
     "next": "14.0.4",
     "next-auth": "^4.24.5",
@@ -26,6 +27,7 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.12.0",
     "sanity": "^3.24.1",
+    "stripe": "^14.13.0",
     "swr": "^2.2.4"
   },
   "devDependencies": {
