--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "prettier": {
     "semi": false,
-    "singleQuote": true
+    "singleQuote": true,
+    "prettier.bracketSameLine": false
   },
   "scripts": {
     "dev": "next dev",
